--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
+    "react-tooltip": "^5.18.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "uuid": "^9.0.0"
